...
import CorporateFareIcon from '@mui/icons-material/CorporateFare'
import PostAddIcon from '@mui/icons-material/PostAdd'
import AccessTimeIcon from '@mui/icons-material/AccessTime'
import EventAvailableIcon from '@mui/icons-material/EventAvailable'
import PersonSearchIcon from '@mui/icons-material/PersonSearch'
import SchoolIcon from '@mui/icons-material/School'
import LogoutIcon from '@mui/icons-material/Logout'
import ManageAccountsSharpIcon from '@mui/icons-material/ManageAccountsSharp'
import StoreIcon from '@mui/icons-material/Store'
import PublicIcon from '@mui/icons-material/Public'
import GroupsIcon from '@mui/icons-material/Groups'
import ForumIcon from '@mui/icons-material/Forum'
import PlayArrowIcon from '@mui/icons-material/PlayArrow';
...
      title: 'Manage Pharmacies',
      icon: <MedicationLiquidIcon />,
      children: [
        { segment: 'my-pharmacies', title: 'My Pharmacies', icon: <StoreIcon /> },
        { segment: 'my-chain', title: 'My Chain', icon: <CorporateFareIcon /> },
        { segment: 'roster', title: 'Internal Roster', icon: <EventAvailableIcon /> },
        { segment: 'attendance-reviews', title: 'Attendance Approvals', icon: <CheckCircleIcon /> },
      ],
    },
    { segment: 'dashboard/organization/post-shift', title: 'Post Shift', icon: <PostAddIcon /> },
    { segment: 'dashboard/workforce/timesheets', title: 'Timesheets', icon: <AccessTimeIcon /> },
    { segment: 'dashboard/workforce/settings', title: 'Workforce & Payroll', icon: <ManageAccountsSharpIcon /> },
    {
      segment: 'dashboard/organization/shift-center',
      title: 'Shift Centre',
      icon: <AccessTimeIcon />,
      children: [
        { segment: 'active', title: 'Active Shifts', icon: <PlayArrowIcon /> },
...
